# ExpressionSolverCpp

./: CMakeLists.txt
src/: Context.cpp  Context.hpp  Expression.hpp  ExpressionSolver.cpp  ExpressionSolver.hpp  Operation.hpp  Optional.hpp
tests/: CMakeLists.txt  test_BasicOperations.cpp
